# typed-storage

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
tests/: test_core.py
tests/presets/: test_image_storage.py  test_json_storage.py
typed_storage/: __init__.py  core.py
typed_storage/presets/: image_storage.py  json_storage.py
